# ivy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  compileShaders.sh  style.sh
.github/workflows/: main.yml
assets/shaders/: triangle.frag.spv  triangle.vert.spv
src/: main.cpp
src/ivy/: consts.h  engine.cpp  engine.h  log.h  options.h  renderer.cpp  renderer.h  types.h
src/ivy/entity/: entity.h  entity.inl
src/ivy/entity/components/: camera.h  component.h  light.h  mesh.h  model.h  transform.h
src/ivy/graphics/: command_buffer.cpp  command_buffer.h  compute_pass.cpp  compute_pass.h  descriptor_set.cpp  descriptor_set.h  descriptor_set_cache.cpp  descriptor_set_cache.h  framebuffer.h  geometry.cpp  geometry.h  graphics_pass.cpp  graphics_pass.h  material.h  mesh.h  mesh.inl  render_context.cpp  render_context.h  render_device.cpp  render_device.h  renderer.cpp  renderer.h  shader.h  texture.cpp  texture.h  texture2d.cpp  texture2d.h  vertex.h  vertex_description.h  vk_utils.cpp  vk_utils.h
src/ivy/graphics/shaders/: brdf.glsl  bvh.glsl  compute.comp  consts.glsl  fullscreen.vert  gbuffer.frag  gbuffer.vert  lighting.frag  lighting.vert  lights.glsl  postprocess.frag  shadow_directional.vert  shadow_point.frag  shadow_point.geom  shadow_point.vert  structs.glsl  tonemap.glsl  triangle.frag  triangle.vert  utils.glsl
src/ivy/graphics/vulkan/: render_context.cpp  render_context.h  vk_utils.cpp  vk_utils.h
src/ivy/platform/: input_state.cpp  input_state.h  platform.cpp  platform.h
src/ivy/resources/: mesh_resource.cpp  mesh_resource.h  model_resource.cpp  model_resource.h  resource.h  resource_manager.cpp  resource_manager.h  texture_resource.h
src/ivy/scene/: entity.h  entity.inl  scene.cpp  scene.h  scene.inl
src/ivy/scene/components/: camera.h  component.h  light.h  model.h  transform.h
src/ivy/utils/: utils.cpp  utils.h
src/test_game/: renderer.cpp  renderer.h  renderer_raster.cpp  renderer_raster.h  renderer_rt.cpp  renderer_rt.h  test_game.cpp  test_game.h
